--- a/upload/admin/view/template/extension/module/our_team_member_form_nik.twig
+++ b/upload/admin/view/template/extension/module/our_team_member_form_nik.twig
@@ -44,6 +44,9 @@
                 <img src="{{ thumb }}" alt="" title="" data-placeholder="{{ img_placeholder }}"/>
               </a>
               <input type="hidden" name="image" value="{{ image }}" id="input-image1"/>
+              <br>
+              <br>
+              <p>{{ text_image_resolution }}</p>
             </div>
           </div>
           <div class="form-group">
